--- a/VisualStudio/LittleEngine.vcxproj
+++ b/VisualStudio/LittleEngine.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="mlTime.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mlTime.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
